--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
         </nav>
     </header>
     <main>
-        <div class="main_photo">
-            <img src="./images/NahunClau_Preboda-64.jpg" alt="">
+        <div class="slider-container">
+            <div class="slide">
+                <img src="./images/NahunClau_Preboda-64.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/NahunClau_Preboda-38.jpg" alt="">
+            </div>
         </div>
         <div class="text_home">
             <h1>CLAUDIA & NAHUM</h1>
@@ -42,7 +47,7 @@
         </div>
     </main>
     <div class="left_only">
-        <h2>Solo fantan...</h2>
+        <h2>Solo faltan...</h2>
     </div>
     <div class="time_left">
         <div class="days"></div>
