--- a/index.html
+++ b/index.html
@@ -35,11 +35,18 @@
     <main>
         <div class="slider-container">
             <div class="slide">
-                <img src="./images/NahunClau_Preboda-64.jpg" alt="">
+                <img src="./images/NahunClau_Preboda-14.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="./images/NahunClau_Preboda-38.jpg" alt="">
+                <img src="./images/NahunClau_Preboda-7.jpg" alt="">
             </div>
+            <div class="slide">
+                <img src="./images/NahunClau_Preboda-57.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="./images/NahunClau_Preboda-42.jpg" alt="">
+            </div>
+           
         </div>
         <div class="text_home">
             <h1>CLAUDIA & NAHUM</h1>
