--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
             </ul>
         </nav>
         <nav class="phone_menu">
-            <ul>
-                <div class="logo_phone">
-                    <img src="./images/logoWedding.png" alt="">
-                </div>
-                <div class="menu_p">
-                    <img src="./images/List.png" alt="">
-                </div>
+            <div class="logo_phone">
+                <img src="./images/logoWedding.png" alt="">
+            </div>
+            <div class="menu_p">
+                <img src="./images/List.png" alt="" class="menu_icon">
+            </div>
+            <ul class="nav_phone_menu">
+                <li><a href="#story_main">NUESTRA HISTORIA</a></li>
+                <li><a href="">FOTOS</a></li>
+                <li><a href="">CONTACTO</a></li>
+                <li><a href="">INFORMACIÓN</a></li>
             </ul>
         </nav>
     </header>
