--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav class="desktop_menu">
             <ul>
+                <li><a href="#">INICIO</a></li>
                 <li><a href="#story_main">NUESTRA HISTORIA</a></li>
-                <li><a href="">FOTOS</a></li>
                 <img src="./images/logoWedding.png" alt="">
                 <li><a href="">CONTACTO</a></li>
                 <li><a href="">INFORMACIÓN</a></li>
@@ -29,14 +29,17 @@
                 <img src="./images/List.png" alt="" class="menu_icon">
             </div>
             <ul class="nav_phone_menu">
+                <li><a href="#">INICIO</a></li>
                 <li><a href="#story_main">NUESTRA HISTORIA</a></li>
-                <li><a href="">FOTOS</a></li>
                 <li><a href="">CONTACTO</a></li>
                 <li><a href="">INFORMACIÓN</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+
+
+
+    <main class="photos_main">
         <div class="slider-container">
             <div class="slide">
                 <img src="./images/NahunClau_Preboda-14.jpg" alt="">
@@ -57,15 +60,18 @@
             <h4>19 · OCTUBRE · 2024</h4>
         </div>
     </main>
+
     <div class="left_only">
         <h2>Solo faltan...</h2>
     </div>
+
     <div class="time_left">
         <div class="days"></div>
         <div class="hours"></div>
         <div class="minutes"></div>
         <div class="seconds"></div>
     </div>
+
     <section class="litte_story" id="story_main">
         <div class="text_story">
             <h2>Nuestra historia</h2>
@@ -77,10 +83,11 @@
                 <img src="./images/NahunClau_Preboda-19.jpg" alt="">
             </div>
             <div class="frame_more_about">
-                <img src="./images/Frame 197.png" alt="">
+                <a href="./paginas/ourStory.html"><img src="./images/Frame 197.png" alt=""></a>
             </div>
         </div>
     </section>
+
     <div class="ticker">
         <div class="ticker-title">
             <span>CLAUDIA&nbsp&&nbspNAHUM</span>
