pagina nuestra hisrotia compelta

--- a/paginas/ourStory.html
+++ b/paginas/ourStory.html
@@ -60,7 +60,6 @@
                 </div>
                 <div class="description">
                     <h3>Claudia del Valle</h3>
-                    <h4>La mujer más increíble, hermosa, talentosa y carisñosa que cualquier hombre desearía tener</h4>
                 </div>
             </div>
             <div class="profile">
@@ -72,12 +71,54 @@
                 </div>
                 <div class="description">
                     <h3>Nahum Pérez</h3>
-                    <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia, quaerat aperiam reiciendis ad veniam natus architecto inventore totam id dolores facilis sit rem in excepturi alias dignissimos voluptate ratione consectetur.</h4>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="time_line">
+        <div class="years">
+            <div class="year">
+                <h2>2017</h2>
+            </div>
+            <div class="year">
+                <h2>2018</h2>
+            </div>
+            <div class="year">
+                <h2>2023</h2>
+            </div>
+            <div class="year">
+                <h2>2024</h2>
+            </div>
+        </div>
+        <div class="description_story">
+            <div class="year_description">
+                <h2>Primera cita</h2>
+                <h3>Nos conocimos un 12 de Noviembre del 2017</h3>
+            </div>
+            <div class="year_description">
+                <h2>Pedida de novia</h2>
+                <h3>Nos hicimos novios un 20 de Enero del 2018</h3>
+            </div>
+            <div class="year_description">
+                <h2>Compromiso</h2>
+                <h3>Nos comprometimos un 23 de Septiembre del 2023</h3>
+            </div>
+            <div class="year_description">
+                <h2>Nuestra boda</h2>
+                <h3>El día más esperado, nuestra boda que será el 19 de Octubre del 2024</h3>
+            </div>
+        </div>
+    </section>
     
+    <section class="she_said_yes">
+        <div class="photo_our_story2">
+            <img src="../images/NahunClau_Preboda-42.jpg" alt="">
+        </div>
+        <div class="section_title2">
+            <h1>SHE SAID YES!</h1>
+        </div>
+    </section>
 
     <script src="./js/fun.js"></script>
 </body>
