--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="desktop_menu">
             <ul>
                 <li><a href="#">INICIO</a></li>
-                <li><a href="#story_main">NUESTRA HISTORIA</a></li>
+                <li><a href="./paginas/ourStory.html">NUESTRA HISTORIA</a></li>
                 <img src="./images/logoWedding.png" alt="">
                 <li><a href="">CONTACTO</a></li>
                 <li><a href="">INFORMACIÓN</a></li>
@@ -30,9 +30,9 @@
             </div>
             <ul class="nav_phone_menu">
                 <li><a href="#">INICIO</a></li>
-                <li><a href="#story_main">NUESTRA HISTORIA</a></li>
-                <li><a href="">CONTACTO</a></li>
+                <li><a href="./paginas/ourStory.html">NUESTRA HISTORIA</a></li>
                 <li><a href="">INFORMACIÓN</a></li>
+                <li><a href="">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
