--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="#">INICIO</a></li>
                 <li><a href="./paginas/ourStory.html">NUESTRA HISTORIA</a></li>
                 <img src="./images/logoWedding.png" alt="">
-                <li><a href="">CONTACTO</a></li>
-                <li><a href="">INFORMACIÓN</a></li>
+                <li><a href="#information">INFORMACIÓN</a></li>
+                <li><a href="#contact">CONTACTO</a></li>
             </ul>
         </nav>
         <nav class="phone_menu">
@@ -31,8 +31,8 @@
             <ul class="nav_phone_menu">
                 <li><a href="#">INICIO</a></li>
                 <li><a href="./paginas/ourStory.html">NUESTRA HISTORIA</a></li>
-                <li><a href="">INFORMACIÓN</a></li>
-                <li><a href="">CONTACTO</a></li>
+                <li><a href="#information">INFORMACIÓN</a></li>
+                <li><a href="#contact">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <section class="info_day">
+    <section class="info_day" id="information">
         <div class="info_title">
             <div class="about_day">
                 <h2>Acerca de la boda...</h2>
@@ -153,10 +153,20 @@
                 <img src="./images/Dress.png" alt="">
             </div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor dignissimos obcaecati quis. Sed expedita veritatis aut accusantium explicabo, cum commodi. Alias, rerum recusandae. Ipsa commodi, repellat ratione vero assumenda quod.</p>
-            <a href="">Conoce más</a>
+            <a href="./paginas/dressCode.html">Conoce más</a>
         </div>
     </section>
     
+
+
+    <section class="contact_wedding" id="contact">
+        <h2>Por el momento aún no está disponible esta sección...</h2>
+        <h3>Pronto habrá más información, esperamos que tú también estés tan emocionado como nosotros...</h3>
+    </section>
+
+
+
+
     <script src="./js/fun.js"></script>
 </body>
 </html>
