--- a/paginas/ourStory.html
+++ b/paginas/ourStory.html
@@ -17,8 +17,8 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="#">NUESTRA HISTORIA</a></li>
                 <img src="../images/logoWedding.png" alt="">
-                <li><a href="">CONTACTO</a></li>
-                <li><a href="">INFORMACIÓN</a></li>
+                <li><a href="../index.html#information">INFORMACIÓN</a></li>
+                <li><a href="../index.html#contact">CONTACTO</a></li>
             </ul>
         </nav>
         <nav class="phone_menu">
@@ -31,8 +31,8 @@
             <ul class="nav_phone_menu">
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="#">NUESTRA HISTORIA</a></li>
-                <li><a href="">CONTACTO</a></li>
-                <li><a href="">INFORMACIÓN</a></li>
+                <li><a href="../index.html#information">INFORMACIÓN</a></li>
+                <li><a href="../index.html#contact">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
