nueva pagina completa

--- a/paginas/dressCode.html
+++ b/paginas/dressCode.html
@@ -48,11 +48,10 @@
     </section>
     
     <section class="woman_options">
-        <h1>DRESS CODE FOR OUR WEDDING</h1>
-        <h2>PARA ELLAS:</h2>
+        <h2>PARA ELLAS</h2>
         <div class="information_dress_code">
             <div class="title">
-                <h2>Colores recomendados:</h2>
+                <h2>Colores recomendados</h2>
             </div>
             <div class="colors">
                 <div class="color" style="background-color: rgb(248, 255, 183);"></div>
@@ -63,6 +62,84 @@
                 <div class="color" style="background-color: rgba(159, 49, 49, 0.554);"></div>
                 <div class="color" style="background-color: rgb(23, 33, 97);"></div>
                 <div class="color" style="background-color: rgb(30, 33, 33);"></div>
+            </div>
+        </div>
+        <div class="information_dress_code">
+            <div class="title">
+                <h2>Reglas de vestimenta</h2>
+            </div>
+            <div class="reglas">
+                <div class="regla">
+                    <img src="../images/CheckCircle.png" alt="">
+                    <h2>VESTIMENTA FORMAL DE ETIQUETA</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/Prohibit (1).png" alt="">
+                    <h2>NO COLOR BLANCO</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/CheckCircle.png" alt="">
+                    <h2>VESTIMENTA FORMAL DE ETIQUETA</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/Prohibit (1).png" alt="">
+                    <h2>NO COLOR ROJO</h2>
+                </div>
+            </div>
+        </div>
+        <div class="information_dress_code">
+            <div class="title">
+                <h2>EJEMPLOS DE VESTIDO</h2>
+            </div>
+            <div class="dress_examples">
+                <h2>Aún no disponibles por el momento...</h2>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="woman_options">
+        <h2>PARA ELLOS</h2>
+        <div class="information_dress_code">
+            <div class="title">
+                <h2>Colores recomendados</h2>
+            </div>
+            <div class="colors">
+                <div class="color" style="background-color: rgb(7, 9, 31);"></div>
+                <div class="color" style="background-color: rgb(79, 79, 79);"></div>
+                <div class="color" style="background-color: #CAA371;"></div>
+                <div class="color" style="background-color: rgb(17, 30, 80);"></div>
+            </div>
+        </div>
+        <div class="information_dress_code">
+            <div class="title">
+                <h2>Reglas de vestimenta</h2>
+            </div>
+            <div class="reglas">
+                <div class="regla">
+                    <img src="../images/CheckCircle.png" alt="">
+                    <h2>VESTIMENTA FORMAL DE ETIQUETA</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/Prohibit (1).png" alt="">
+                    <h2>NO COLOR BLANCO</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/CheckCircle.png" alt="">
+                    <h2>VESTIMENTA FORMAL DE ETIQUETA</h2>
+                </div>
+                <div class="regla">
+                    <img src="../images/Prohibit (1).png" alt="">
+                    <h2>NO COLOR ROJO</h2>
+                </div>
+            </div>
+        </div>
+        <div class="information_dress_code">
+            <div class="title">
+                <h2>EJEMPLOS DE VESTIDO</h2>
+            </div>
+            <div class="dress_examples">
+                <h2>Aún no disponibles por el momento...</h2>
             </div>
         </div>
     </section>
