listo por esta semana

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <ul>
                 <li><a href="#">INICIO</a></li>
                 <li><a href="./paginas/ourStory.html">NUESTRA HISTORIA</a></li>
-                <img src="./images/logoWedding.png" alt="">
+                <img src="./images/logoWedding.png" alt="" class="principal_logo">
                 <li><a href="#information">INFORMACIÓN</a></li>
                 <li><a href="#contact">CONTACTO</a></li>
             </ul>
         </nav>
         <nav class="phone_menu">
             <div class="logo_phone">
-                <img src="./images/logoWedding.png" alt="">
+                <img src="./images/logoWedding.png" alt="" class="principal_logo">
             </div>
             <div class="menu_p">
                 <img src="./images/List.png" alt="" class="menu_icon">
@@ -128,15 +128,15 @@
                 <h2>HORARIOS</h2>
                 <img src="./images/ClockCountdown.png" alt="">
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugiat odio velit. Hic minima iste inventore dicta, omnis distinctio, qui quaerat accusantium totam cumque error expedita reprehenderit eum adipisci voluptates!</p>
-            <a href="">Conoce más</a>
+            <p>Aquí encontrarás los horarios clave para el día de la boda. Desde la ceremonia hasta la recepción, te proporcionamos una guía detallada para que puedas planificar tu día de manera efectiva. Estos horarios te serán de gran ayuda para coordinar cada momento especial y asegurarte de no perderte nada durante este día tan significativo. ¡Esperamos que esta información facilite tu experiencia en nuestra boda!</p>
+            <a href="">Ver itinerario</a>
         </div>
         <div class="info">
             <div class="info_icon">
                 <h2>COMO LLEGAR</h2>
                 <img src="./images/MapPin.png" alt="">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum laborum, libero aliquid repudiandae ratione quos fugiat odit non labore provident magnam nostrum delectus ab earum nihil, sed officiis? At, velit.</p>
+            <p>En este espacio, te facilitamos la ubicación exacta del lugar de la boda. Podrás acceder a Google Maps para obtener direcciones precisas y asegurarte de llegar al evento sin contratiempos. Esta información te permitirá planificar tu ruta y garantizar una llegada puntual al hermoso jardín donde se llevará a cabo la ceremonia.</p>
             <a href="https://maps.app.goo.gl/yLPfyUgFqLGKbxfA7" target="_blank">Ver ubicación</a>
         </div>
         <div class="info">
@@ -144,16 +144,16 @@
                 <h2>HOSPEDAJE</h2>
                 <img src="./images/Bed.png" alt="">
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, accusamus. Quas quos animi est officia reiciendis, nobis debitis amet quibusdam ea natus, ipsam qui. Sunt voluptatem vel tenetur. Delectus, nobis.</p>
-            <a href="">Conoce más</a>
+            <p>Aquí podrás descubrir diversas opciones de hospedaje cercanas al jardín donde se llevará a cabo la boda. Te proporcionaremos información sobre diferentes alojamientos, para que encuentres la opción que mejor se adapte a tus necesidades. Esperamos que esta guía facilite la planificación de tu estancia durante este evento tan especial.</p>
+            <a href="">Ver opciones</a>
         </div>
         <div class="info">
             <div class="info_icon">
                 <h2>DRESS CODE</h2>
                 <img src="./images/Dress.png" alt="">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor dignissimos obcaecati quis. Sed expedita veritatis aut accusantium explicabo, cum commodi. Alias, rerum recusandae. Ipsa commodi, repellat ratione vero assumenda quod.</p>
-            <a href="./paginas/dressCode.html">Conoce más</a>
+            <p>En esta sección, encontrarás diversas opciones de colores y estilos permitidos para el día de la boda. Además, proporcionamos algunas reglas que te serán de gran utilidad al seleccionar tu atuendo. Esperamos que esta guía facilite la elección de tu outfit para este día tan especial.</p>
+            <a href="./paginas/dressCode.html">Ver estilos</a>
         </div>
     </section>
     
