--- a/paginas/dressCode.html
+++ b/paginas/dressCode.html
@@ -16,14 +16,14 @@
             <ul>
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="../paginas/ourStory.html">NUESTRA HISTORIA</a></li>
-                <img src="../images/logoWedding.png" alt="">
+                <img src="../images/logoWedding.png" alt="" class="principal_logo">
                 <li><a href="../index.html#information">INFORMACIÓN</a></li>
                 <li><a href="../index.html#contact">CONTACTO</a></li> 
             </ul>
         </nav>
         <nav class="phone_menu">
             <div class="logo_phone">
-                <img src="../images/logoWedding.png" alt="">
+                <img src="../images/logoWedding.png" alt="" class="principal_logo">
             </div>
             <div class="menu_p">
                 <img src="../images/List.png" alt="" class="menu_icon">
